# protgps

./: .gitignore  .gitmodules  LICENSE  README.md  environment.yml  performance_analysis.ipynb  performance_analysis_official.ipynb  performance_analysis_official_custom.ipynb  pyproject.toml  requirements.txt  run_train.sh
configs/protein_localization/: all_idr_context.json  all_idr_context_save_preds.json  cluster.json  comp_classification_prot.json  compartment_classification_idr_context.json  compartment_classification_precomp.json  eval_full_prot.json  full_prot_comp_pred.json  generate_idr.json  generate_idr_cond.json  generate_idr_uniprot.json  idr_context_test.json  idr_no_context_test.json  reverse_homology.json  save_context_idr_hiddens.json  save_idr_hiddens.json  save_prot_hiddens.json
configs/test/: train_ddp.json  train_single_node.json
custom_model/: reproduce_model.ipynb  reproduce_model.py
data/: convert_to_csv.ipynb  dataset_from_json.csv  dataset_from_json.xlsx  dataset_from_web.csv  mmseqs_row2cluster_30seq_80cov.p
notebook/: Analysis.ipynb  Predict.ipynb
protgps/: __init__.py
protgps/callbacks/: basic.py  swa.py
protgps/datasets/: abstract.py  disprot.py  protein_compartments.py  reverse_homology.py
protgps/learning/losses/: basic.py
protgps/lightning/: base.py
protgps/loggers/: comet.py  tensorboard.py  wandb.py
protgps/models/: abstract.py  classifier.py  fair_esm.py
protgps/utils/: callbacks.py  classes.py  debug.py  loading.py  parsing.py
scripts/: dispatcher.py  inference.py  main.py  run_inference.sh
(+13 files in other folders)
