[tool.poetry]
name = "protgps"
version = "0.0.1"
description = ""
authors = ["Peter G Mikhael <pgmikhael@csail.mit.edu>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pgmikhael/protgps"


[tool.poetry.dependencies]
python = "3.8"

[tool.poetry.group.ci.dependencies]
black      = "^23.3.0"
mypy       = "^1.1.1"
pylint     = "^2.13.0"
pytest     = "^7.1.2"
pytest-cov = "^3.0.0"
rstcheck   = { version = "^6.1.2", python = "<4" }
ruff       = "^0.0.291"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
